syntax = "proto3";
package proto;

message ClientRequest {
    string msg = 1;
}

message ServerReply {
    string msg = 1;
}

service CStruct {
    rpc GetHiMsg(ClientRequest) returns (ServerReply) {}
}
